Avoid overlap for daily boxoffice on select.

--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ h3 {
 	font-size: 1.5em;
 }
 
+#year-select {
+    margin-bottom: 10px;
+}
+
 #footer {
 	margin-top: 30px;
 	margin-bottom: 20px;
